base structure added

--- a/index.html
+++ b/index.html
@@ -11,11 +11,58 @@
 <body>
 
     <header>
-        .<div
+        <div class="name_title">
+        <h1>Adrian Brown</h1>
+        <p>Web Developer</p>
+        </div>
+
+        <div class="contact">
+            <ul>
+                <li>Email</li>
+                <li>Phone</li>
+                <li>LinkedIn</li>
+                <li>GitHub</li>
+            </ul>
+        </div>
     </header>
 
     <main>
-        .
+
+        <div class="skills">
+            <h3>Skills</h3>
+            <ul class="skill-list">
+                <li class="skill-item">HTML</li>
+                <li class="skill-item">CSS</li>
+                <li class="skill-item">Javascript Framework Boostrap</li>
+                <li class="skill-item">VSC with Git</li>
+                <li class="skill-item">Paired Programming Thymeleaf</li>
+                <li class="skill-item">Java SE</li>
+                <li class="skill-item">MySQL</li>
+                <li class="skill-item">Spring Boot</li>
+                <li class="skill-item">JQuery</li>
+                <li class="skill-item">Object Oriented Programming Java EE (Servlets, JSP)</li>
+                <li class="skill-item">Agile</li>
+            </ul>
+        </div>
+
+        <div class="development-projects">
+            <h3>Development Projects</h3>
+            <div class="project-row">
+                <div><h5>Seeking Developers</h5></div>
+            </div>
+            <div class="project-row"></div>
+            <div class="project-row"></div>
+            <div class="project-row"></div>
+        </div>
+
+        <div class="Experience">
+            <h3>Academic Experience</h3>
+            <div><h5>CODEUP</h5></div>
+<!--CODEUP JULY 2019 Certificate of Completion
+Codeup is a fully-immersive, project based, and
+intensive 18 week full stack Java career accelerator that provides students with 600+ hours of expert instruction in software development.-->
+        </div>
+
     </main>
 
     <footer>
