--- a/index.html
+++ b/index.html
@@ -5,15 +5,22 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+<!--    css start-->
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,600,700" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="main.css">
+<!--    css end-->
     <title>Resume</title>
 </head>
 
 <body>
 
-    <header>
-        <div class="name_title">
-        <h1>Adrian Brown</h1>
-        <p>Web Developer</p>
+<div class="container">
+
+    <div class="left-side">
+        <div class="name-title">
+            <h1>Adrian Brown</h1>
+            <p>Web Developer</p>
         </div>
 
         <div class="contact">
@@ -24,12 +31,9 @@
                 <li>GitHub</li>
             </ul>
         </div>
-    </header>
-
-    <main>
 
         <div class="skills">
-            <h3>Skills</h3>
+            <h2>Skills</h2>
             <ul class="skill-list">
                 <li class="skill-item">HTML</li>
                 <li class="skill-item">CSS</li>
@@ -44,30 +48,58 @@
                 <li class="skill-item">Agile</li>
             </ul>
         </div>
+    </div>
+
+<!--    <div class="center">-->
+<!--&lt;!&ndash;        space holder&ndash;&gt;-->
+<!--    </div>-->
+
+    <div class="right-side">
 
         <div class="development-projects">
-            <h3>Development Projects</h3>
+            <h2>Development Projects</h2>
             <div class="project-row">
-                <div><h5>Seeking Developers</h5></div>
+                <div><h4><strong>Seeking Developers</strong></h4></div>
+                <div>May 2022</div>
             </div>
-            <div class="project-row"></div>
-            <div class="project-row"></div>
-            <div class="project-row"></div>
+            <div><p>Group Project. Capstone Project. Built a web application using Spring that allows users to create, post, and edit projects and profiles, contribute and collaborate on projects, view their own dashboard and search through users once logged in. When project is marked "completed", users can then rate each contributor. This rating is displayed on each users profile, which can also be viewed by other users.</p></div>
+            <div class="project-row">
+                <div><h4><strong>AD Lister</strong></h4></div>
+                <div>April 2022</div>
+            </div>
+            <div><p>Group project. Built website that uses a database that we created to display employees like you would see an ad on an ad lister. The user can log in as either an employee or an employer. Employees can edit their profiles. Employers can search through employees with multiple parameters. Admins can add, delete, and edit any user.</p></div>
+            <div class="project-row">
+                <div><h4><strong>Dungeon Trek</strong></h4></div>
+                <div>Feb 2022</div>
+            </div>
+            <div><p>Built an in-console role-play game using Java. The player interacts by typing in a response after being prompted by the game. The player battles enemies with randomized health and attack points.</p></div>
+            <div class="project-row">
+                <div><h4><strong>Movie Application</strong></h4></div>
+                <div>Jan 2022</div>
+            </div>
+            <div><p>Paired Programming project. Created a web application using javascript that allows users to add, edit and delete movies from a local data source. I helped debug the code as we took turns writing each block of code or blocks of ode for each bit of functionality.</p></div>
         </div>
 
-        <div class="Experience">
-            <h3>Academic Experience</h3>
-            <div><h5>CODEUP</h5></div>
-<!--CODEUP JULY 2019 Certificate of Completion
-Codeup is a fully-immersive, project based, and
-intensive 18 week full stack Java career accelerator that provides students with 600+ hours of expert instruction in software development.-->
+        <div class="experience">
+            <h2>Academic Experience</h2>
+            <div class="academic-row">
+                <div><h4><strong>CODEUP</strong></h4></div>
+                <div>May 2022</div>
+            </div>
+            <div><p><em>Certificate of Completion</em></p></div>
+            <div><p>Codeup is a fully-immersive, project based, and
+                intensive 18 week full stack Java career accelerator that provides students with 600+ hours of expert instruction in software development.</p></div>
+            <div class="academic-row">
+                <div><h4><strong>ARAPAHOE C.C.</strong></h4></div>
+                <div>June 2021</div>
+            </div>
+            <div><p>Completed 56 credit hrs. towards Associate of Applied Science Business Management degree.</p></div>
+        </div>
         </div>
 
-    </main>
+    </div>
 
-    <footer>
-        .
-    </footer>
+</div>
 
 </body>
 
