refactored layout, skills at top

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="left-side">
         <div class="name-title">
             <h1>Adrian Brown</h1>
-            <p>Web Developer</p>
+            <p>Software Developer</p>
         </div>
 
         <div class="contact">
@@ -32,22 +32,22 @@
             </ul>
         </div>
 
-        <div class="skills">
-            <h2>Skills</h2>
-            <ul class="skill-list">
-                <li class="skill-item">HTML</li>
-                <li class="skill-item">CSS</li>
-                <li class="skill-item">Javascript Framework Boostrap</li>
-                <li class="skill-item">VSC with Git</li>
-                <li class="skill-item">Paired Programming Thymeleaf</li>
-                <li class="skill-item">Java SE</li>
-                <li class="skill-item">MySQL</li>
-                <li class="skill-item">Spring Boot</li>
-                <li class="skill-item">JQuery</li>
-                <li class="skill-item">Object Oriented Programming Java EE (Servlets, JSP)</li>
-                <li class="skill-item">Agile</li>
-            </ul>
+        <div class="experience">
+            <h2>Academic Experience</h2>
+            <div class="academic-row">
+                <div><h4><strong>CODEUP</strong></h4></div>
+                <div>May 2022</div>
+            </div>
+            <div><p><em>Certificate of Completion</em></p></div>
+            <div><p>Codeup is a fully-immersive, project based, and
+                intensive 18 week full stack Java career accelerator that provides students with 600+ hours of expert instruction in software development.</p></div>
+            <div class="academic-row">
+                <div><h4><strong>ARAPAHOE C.C.</strong></h4></div>
+                <div>June 2021</div>
+            </div>
+            <div><p>Completed 56 credit hrs. towards Associate of Applied Science Business Management degree.</p></div>
         </div>
+
     </div>
 
 <!--    <div class="center">-->
@@ -55,6 +55,31 @@
 <!--    </div>-->
 
     <div class="right-side">
+
+        <div class="skills">
+            <h2>Skills</h2>
+            <div class="skill-card">
+                <div class="skills-left">
+                    <ul class="skill-list">
+                        <li class="skill-item">HTML</li>
+                        <li class="skill-item">CSS</li>
+                        <li class="skill-item">Javascript Framework Boostrap</li>
+                        <li class="skill-item">VSC with Git</li>
+                        <li class="skill-item">Paired Programming Thymeleaf</li>
+                    </ul>
+                </div>
+                <div class="skills-right">
+                    <ul class="skill-list">
+                        <li class="skill-item">Java SE</li>
+                        <li class="skill-item">MySQL</li>
+                        <li class="skill-item">Spring Boot</li>
+                        <li class="skill-item">JQuery</li>
+                        <li class="skill-item">Agile</li>
+                        <li class="skill-item">Object Oriented Programming Java EE (Servlets, JSP)</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
 
         <div class="development-projects">
             <h2>Development Projects</h2>
@@ -80,21 +105,8 @@
             <div><p>Paired Programming project. Created a web application using javascript that allows users to add, edit and delete movies from a local data source. I helped debug the code as we took turns writing each block of code or blocks of ode for each bit of functionality.</p></div>
         </div>
 
-        <div class="experience">
-            <h2>Academic Experience</h2>
-            <div class="academic-row">
-                <div><h4><strong>CODEUP</strong></h4></div>
-                <div>May 2022</div>
-            </div>
-            <div><p><em>Certificate of Completion</em></p></div>
-            <div><p>Codeup is a fully-immersive, project based, and
-                intensive 18 week full stack Java career accelerator that provides students with 600+ hours of expert instruction in software development.</p></div>
-            <div class="academic-row">
-                <div><h4><strong>ARAPAHOE C.C.</strong></h4></div>
-                <div>June 2021</div>
-            </div>
-            <div><p>Completed 56 credit hrs. towards Associate of Applied Science Business Management degree.</p></div>
-        </div>
+        .
+
         </div>
 
     </div>
