professional experience, about me, and contact icons added

--- a/index.html
+++ b/index.html
@@ -25,11 +25,34 @@
 
         <div class="contact">
             <ul>
-                <li>Email</li>
-                <li>Phone</li>
-                <li>LinkedIn</li>
-                <li>GitHub</li>
+                <li><a href = "mailto: abc@example.com"><img src="assets/png/002-email.png" alt="email-logo"></a></li>
+                <li><img src="assets/png/001-linkedin.png" alt="Linkedin-logo"></li>
+                <li><img src="assets/png/003-github.png" alt="GitHub-logo"></li>
+                <li>Phone: 123-467-7890</li>
             </ul>
+        </div>
+
+        <div class="experience">
+            <div><p>Veteran turned Software Developer. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab doloremque eum maiores molestias nam nisi, officia quae quasi reprehenderit vel!</p></div>
+        </div>
+
+        <div class="experience">
+            <h2>Professional Experience</h2>
+            <div class="professional-row">
+                <div><h4><strong>FREELANCE PHOTOGRAPHER</strong></h4></div>
+                <div>2020-<em>Present</em></div>
+            </div>
+            <div><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae, consequuntur dolore, ducimus ea expedita minima perspiciatis possimus ratione repellat repellendus unde velit voluptates.</p></div>
+            <div class="professional-row">
+                <div><h4><strong>UNITED STATES ARMY</strong></h4></div>
+                <div>2013-2017</div>
+            </div>
+            <div><p>Active duty military service. Beatae, consequuntur dolore, ducimus ea expedita minima perspiciatis possimus ratione repellat repellendus unde velit voluptates. Aliquid ducimus expedita magnam nulla porro tenetur.</p></div>
+            <div class="professional-row">
+                <div><h4><strong>Wilson's Carpentry</strong></h4></div>
+                <div>2019-2011</div>
+            </div>
+            <div><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus aut cum exercitationem maiores nostrum ratione recusandae, tempora tenetur velit. Accusamus dolor, ducimus earum molestias porro possimus sit tempore ut!</p></div>
         </div>
 
         <div class="experience">
@@ -92,7 +115,7 @@
                 <div><h4><strong>AD Lister</strong></h4></div>
                 <div>April 2022</div>
             </div>
-            <div><p>Group project. Built website that uses a database that we created to display employees like you would see an ad on an ad lister. The user can log in as either an employee or an employer. Employees can edit their profiles. Employers can search through employees with multiple parameters. Admins can add, delete, and edit any user.</p></div>
+            <div><p>A full-stack web application utilizing Java servlets, JSP's, JSTL, Apache, and data access objects to allow users to CRUD ads from a MySQL database, as well as send and receive private messages between each other, and change their profile and profile pictures.</p></div>
             <div class="project-row">
                 <div><h4><strong>Dungeon Trek</strong></h4></div>
                 <div>Feb 2022</div>
@@ -102,10 +125,8 @@
                 <div><h4><strong>Movie Application</strong></h4></div>
                 <div>Jan 2022</div>
             </div>
-            <div><p>Paired Programming project. Created a web application using javascript that allows users to add, edit and delete movies from a local data source. I helped debug the code as we took turns writing each block of code or blocks of ode for each bit of functionality.</p></div>
+            <div><p>Co-designed and built a JavaScript-centric page that displayed movies users could add, delete, and edit. Attached an API that pulled images and data relevant to the films. Contributed to parts of the JavaScript code, but largely designed the layout and focused on user experience.</p></div>
         </div>
-
-        .
 
         </div>
 
