major refactor, web responsive desgin & media queries

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <div class="container">
 
-    <div class="left-side">
+    <section class="left-side">
         <div class="name-title">
             <h1>Adrian Brown</h1>
             <p>Software Developer</p>
@@ -32,20 +32,21 @@
             </ul>
         </div>
 
-        <div class="experience">
+        <section class="about-me">
             <div><p>Veteran turned Software Developer. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab doloremque eum maiores molestias nam nisi, officia quae quasi reprehenderit vel!</p></div>
-        </div>
+        </section>
 
-        <div class="skills">
+        <section class="skills-container">
             <h2>Skills</h2>
             <div class="skill-card">
                 <div class="skills-left">
                     <ul class="skill-list">
                         <li class="skill-item">HTML</li>
                         <li class="skill-item">CSS</li>
-                        <li class="skill-item">Javascript Framework Boostrap</li>
+                        <li class="skill-item">Javascript</li>
+                        <li class="skill-item">Boostrap</li>
                         <li class="skill-item">VSC with Git</li>
-                        <li class="skill-item">Paired Programming Thymeleaf</li>
+                        <li class="skill-item">Paired-Programming Thymeleaf</li>
                     </ul>
                 </div>
                 <div class="skills-right">
@@ -59,76 +60,76 @@
                     </ul>
                 </div>
             </div>
-        </div>
+        </section>
 
-        <div class="development-projects">
+        <section class="projects-container">
             <h2>Development Projects</h2>
             <div class="project-row">
                 <div><h4><strong>Seeking Developers</strong></h4></div>
                 <div>May 2022</div>
             </div>
-            <div><p>Group Project. Capstone Project. Built a web application using Spring that allows users to create, post, and edit projects and profiles, contribute and collaborate on projects, view their own dashboard and search through users once logged in. When project is marked "completed", users can then rate each contributor. This rating is displayed on each users profile, which can also be viewed by other users.</p></div>
+            <div><p class="script">Group Project. Capstone Project. Built a web application using Spring that allows users to create, post, and edit projects and profiles, contribute and collaborate on projects, view their own dashboard and search through users once logged in. When project is marked "completed", users can then rate each contributor. This rating is displayed on each users profile, which can also be viewed by other users.</p></div>
             <div class="project-row">
                 <div><h4><strong>AD Lister</strong></h4></div>
                 <div>April 2022</div>
             </div>
-            <div><p>A full-stack web application utilizing Java servlets, JSP's, JSTL, Apache, and data access objects to allow users to CRUD ads from a MySQL database, as well as send and receive private messages between each other, and change their profile and profile pictures.</p></div>
+            <div><p class="script">A full-stack web application utilizing Java servlets, JSP's, JSTL, Apache, and data access objects to allow users to CRUD ads from a MySQL database, as well as send and receive private messages between each other, and change their profile and profile pictures.</p></div>
             <div class="project-row">
                 <div><h4><strong>Dungeon Trek</strong></h4></div>
                 <div>Feb 2022</div>
             </div>
-            <div><p>Built an in-console role-play game using Java. The player interacts by typing in a response after being prompted by the game. The player battles enemies with randomized health and attack points.</p></div>
+            <div><p class="script">Built an in-console role-play game using Java. The player interacts by typing in a response after being prompted by the game. The player battles enemies with randomized health and attack points.</p></div>
             <div class="project-row">
                 <div><h4><strong>Movie Application</strong></h4></div>
                 <div>Jan 2022</div>
             </div>
-            <div><p>Co-designed and built a JavaScript-centric page that displayed movies users could add, delete, and edit. Attached an API that pulled images and data relevant to the films. Contributed to parts of the JavaScript code, but largely designed the layout and focused on user experience.</p></div>
-        </div>
+            <div><p class="script">Co-designed and built a JavaScript-centric page that displayed movies users could add, delete, and edit. Attached an API that pulled images and data relevant to the films. Contributed to parts of the JavaScript code, but largely designed the layout and focused on user experience.</p></div>
+        </section>
 
-    </div>
+    </section>
 
 <!--    <div class="center">-->
 <!--&lt;!&ndash;        space holder&ndash;&gt;-->
 <!--    </div>-->
 
-    <div class="right-side">
+    <section class="right-side">
 
-        <div class="experience">
+        <section class="experience-top">
             <h2>Professional Experience</h2>
             <div class="professional-row">
-                <div><h4><strong>FREELANCE PHOTOGRAPHER</strong></h4></div>
+                <div><h4><strong>Freelance Photographer</strong></h4></div>
                 <div>2020-<em>Present</em></div>
             </div>
-            <div><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae, consequuntur dolore, ducimus ea expedita minima perspiciatis possimus ratione repellat repellendus unde velit voluptates.</p></div>
+            <div><p class="script">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae, consequuntur dolore, ducimus ea expedita minima perspiciatis possimus ratione repellat repellendus unde velit voluptates.</p></div>
             <div class="professional-row">
-                <div><h4><strong>UNITED STATES ARMY</strong></h4></div>
+                <div><h4><strong>United States Army</strong></h4></div>
                 <div>2013-2017</div>
             </div>
-            <div><p>Active duty military service. Beatae, consequuntur dolore, ducimus ea expedita minima perspiciatis possimus ratione repellat repellendus unde velit voluptates. Aliquid ducimus expedita magnam nulla porro tenetur.</p></div>
+            <div><p class="script">Active duty military service. Beatae, consequuntur dolore, ducimus ea expedita minima perspiciatis possimus ratione repellat repellendus unde velit voluptates. Aliquid ducimus expedita magnam nulla porro tenetur.</p></div>
             <div class="professional-row">
                 <div><h4><strong>Wilson's Carpentry</strong></h4></div>
                 <div>2019-2011</div>
             </div>
-            <div><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus aut cum exercitationem maiores nostrum ratione recusandae, tempora tenetur velit. Accusamus dolor, ducimus earum molestias porro possimus sit tempore ut!</p></div>
-        </div>
+            <div><p class="script">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus aut cum exercitationem maiores nostrum ratione recusandae, tempora tenetur velit. Accusamus dolor, ducimus earum molestias porro possimus sit tempore ut!</p></div>
+        </section>
 
-        <div class="experience">
+        <section class="experience-bot">
             <h2>Academic Experience</h2>
             <div class="academic-row">
-                <div><h4><strong>CODEUP</strong></h4></div>
+                <div><h4><strong>Codeup</strong></h4></div>
                 <div>May 2022</div>
             </div>
-            <div><p><em>Certificate of Completion</em></p></div>
-            <div><p>Codeup is a fully-immersive, project based, and
+            <div><p class="honors"><em>Certificate of Completion</em></p></div>
+            <div><p class="script">Codeup is a fully-immersive, project based, and
                 intensive 18 week full stack Java career accelerator that provides students with 600+ hours of expert instruction in software development.</p></div>
             <div class="academic-row">
                 <div><h4><strong>ARAPAHOE C.C.</strong></h4></div>
                 <div>June 2021</div>
             </div>
-            <div><p>Completed 56 credit hrs. towards Associate of Applied Science Business Management degree.</p></div>
-        </div>
+            <div><p class="script">Completed 56 credit hrs. towards Associate of Applied Science Business Management degree.</p></div>
+        </section>
 
-        </div>
+        </section>
 
     </div>
 
