added transitional screen size media query with own css styling

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 
         <div class="contact">
             <ul>
-                <li><a href = "mailto: abc@example.com"><img src="assets/png/002-email.png" alt="email-logo"></a></li>
+                <li><a href = "mailto: abc@example.com"><img src="assets/png/002-email.png" alt="email-logo" class="email"></a></li>
                 <li><img src="assets/png/001-linkedin.png" alt="Linkedin-logo"></li>
                 <li><img src="assets/png/003-github.png" alt="GitHub-logo"></li>
-                <li>Phone: 123-456-7890</li>
+                <li class="phone">Phone: 123-456-7890</li>
             </ul>
         </div>
 
